# cpp-monkey-platformer

./: Block.cpp  Block.h  Bridge.cpp  Bridge.h  CMakeLists.txt  ContactListener.cpp  ContactListener.h  DummyDrawable.cpp  DummyDrawable.h  IDrawable.h  IPositionable.h  IRotateable.h  Player.cpp  Player.h  Point.cpp  Point.h  README.md  Rope.cpp  Rope.h  Sprite.cpp  Sprite.h  TMatrix.cpp  TMatrix.h  TheGame.pro  World.cpp  World.h  main.cpp
cmake_modules/: FindSFML.cmake
data/: apa_jump_left.tga  apa_jump_right.tga  apa_jump_right.xcf  apa_stand_left.tga  apa_stand_right.tga  apa_stand_right.xcf  apa_walk_right_1.tga  apa_walk_right_1.xcf  apa_walk_right_2.tga  groundtile.tga  level.txt  mario.tga  mario_break_left.tga  mario_break_right.tga  mario_jump_left.tga  mario_jump_right.tga  mario_stand_left.tga  mario_stand_right.tga  mario_walk_1_left.tga  mario_walk_1_right.tga  mario_walk_2_left.tga  mario_walk_2_right.tga  mariosmall.tga  rope.tga
data/concept/: apa.xcf  apagår.xcf  apagår2.xcf  apajump.xcf  apan.xcf  apasad.xcf  bakgrund.xcf  movement.xcf  sittingmonkey.xcf
